Updated button color and js format

--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,7 @@
     <div class="container-fluid text-center">
       <h1 class="mt-5">OMG! You will not believe be but...</h1>
       <h1 class="mt-5" id="the-excuse">My dog ate my code.</h1>
-      <br>
-      <button id="btn">Click here to generate an excuse</button>
+      <button type="button" class="btn btn-success mt-5" id="btn">Click here to generate an excuse</button>
       </div>
     </div>
     <script type="text/javascript" src="bundle/rebundle.js"></script>
